<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.marswilliams.apps.sweettweets.activities.ComposeActivity"
android:padding="6dp">

<!--<ImageView-->
    <!--android:layout_width="50dp"-->
    <!--android:layout_height="50dp"-->
    <!--android:id="@+id/ivUserProfileImage"-->
    <!--android:background="@color/twitter_gray"-->
    <!--android:contentDescription="@string/media"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:layout_alignStart="@+id/etNewTweet" />-->

    <Button
        android:id="@+id/btnClose"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/etNewTweet"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:onClick="onClose"
        android:text="@string/close" />


    <EditText
        android:id="@+id/etNewTweet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/btnClose"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="@dimen/tweet_margin"
        android:hint="@string/compose_hint"
        android:inputType="textMultiLine" />

<Button
    android:id="@+id/btSubmitNewTweet"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentEnd="true"
    android:layout_alignParentBottom="true"
    android:textColorHint="#00aced"
    android:text="@string/tweet" />

</RelativeLayout>