<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/twitter_blue"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@android:style/Theme.NoTitleBar"
    tools:context=".activities.LoginActivity">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:text="@string/welcome"
        android:textColor="@android:color/white"
        android:textSize="@dimen/welcome_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvWelcomeDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvWelcome"
        android:text="@string/welcome_detail"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/white"
        android:textSize="@dimen/welcome_detail_text_size"
        android:visibility="visible"
        tools:text="@string/welcome_detail" />

    <Button
        android:id="@+id/ibLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height"
        android:layout_below="@+id/tvWelcomeDetail"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="74dp"
        android:background="@drawable/pill_filled"
        android:elevation="@dimen/button_elevation"
        android:text="@string/login_label"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/twitter_logo_image_width"
        android:layout_height="@dimen/twitter_logo_image_width"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:adjustViewBounds="false"
        android:baselineAlignBottom="true"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_twitter_logo" />


</RelativeLayout>
