<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.marswilliams.apps.sweettweets.activities.TweetDetailsActivity"
    android:layout_margin="5dp">

    <ImageView
        android:id="@+id/ivProfileImageDetails"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@android:color/black"/>

    <TextView
        android:id="@+id/tvUserNameDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_toEndOf="@+id/ivProfileImageDetails"
        android:minLines="1"
        android:maxLines="1"
        android:ellipsize="end"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textStyle="bold"
        android:text="@string/sample_tweeter"/>

    <TextView
        android:id="@+id/tvScreenNameDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tweeter"
        android:layout_below="@+id/tvUserNameDetails"
        android:layout_toEndOf="@+id/ivProfileImageDetails"
        android:minLines="1"
        android:maxLines="1"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/tvBodyDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tweet_content"
        android:layout_below="@+id/ivProfileImageDetails"
        android:layout_alignParentStart="true"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@android:color/black"
        android:autoLink="all"
        android:linksClickable="true" />

    <!--<ImageView-->
        <!--android:id="@+id/ivMediaImageDetails"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/tvTweetBodyDetails"-->
        <!--android:layout_margin="5dp"/>-->

    <TextView
        android:id="@+id/tvCreatedAtDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/at_time"
        android:layout_below="@+id/tvBodyDetails"
        android:layout_alignParentStart="true" />

    <!--<View-->
        <!--android:id="@+id/vDividerDetails1"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:layout_below="@+id/tvCreatedAt"-->
        <!--android:background="@android:color/darker_gray"-->
        <!--android:layout_marginTop="5dp"-->
        <!--android:layout_marginLeft="5dp"-->
        <!--android:layout_marginRight="5dp"/>-->

    <!--<LinearLayout-->
        <!--android:id="@+id/llRetweetsLikesDetails"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_below="@+id/vDividerDetails1">-->

        <!--<TextView-->
            <!--android:id="@+id/tvNumRetweetsDetails"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/num"-->
            <!--android:textStyle="bold"-->
            <!--android:textColor="@android:color/black"-->
            <!--android:layout_margin="5dp"/>-->

        <!--<TextView-->
            <!--android:id="@+id/tvRetweetsDetails"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/retweets"-->
            <!--android:layout_margin="5dp"/>-->

        <!--<TextView-->
            <!--android:id="@+id/tvNumLikesDetails"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/num"-->
            <!--android:textStyle="bold"-->
            <!--android:textColor="@android:color/black"-->
            <!--android:layout_margin="5dp"/>-->

        <!--<TextView-->
            <!--android:id="@+id/tvLikesDetails"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Likes"-->
            <!--android:layout_margin="5dp"/>-->
    <!--</LinearLayout>-->

    <!--<View-->
        <!--android:id="@+id/vDividerDetails2"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:layout_below="@+id/llRetweetsLikesDetails"-->
        <!--android:background="@android:color/darker_gray"-->
        <!--android:layout_margin="5dp"/>-->

    <!--<LinearLayout-->
        <!--android:id="@+id/llButtonRowDetails"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/vDividerDetails2"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:orientation="horizontal">-->

        <!--<ImageButton-->
            <!--android:id="@+id/ibMessageDetails"-->
            <!--android:layout_width="30dp"-->
            <!--android:layout_height="30dp"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:layout_marginRight="20dp"-->
            <!--android:scaleX="-1"-->
            <!--android:backgroundTint="@android:color/transparent"-->
            <!--app:srcCompat="@drawable/ic_no_comment"/>-->

        <!--<ImageButton-->
            <!--android:id="@+id/ibRetweetDetails"-->
            <!--android:layout_width="30dp"-->
            <!--android:layout_height="30dp"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:layout_marginRight="20dp"-->
            <!--android:backgroundTint="@android:color/transparent"-->
            <!--app:srcCompat="@drawable/ic_unretweet"/>-->

        <!--<ImageButton-->
            <!--android:id="@+id/ibFavoriteDetails"-->
            <!--android:layout_width="30dp"-->
            <!--android:layout_height="30dp"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:layout_marginRight="20dp"-->
            <!--android:backgroundTint="@android:color/transparent"-->
            <!--app:srcCompat="@drawable/ic_unfavorite"/>-->

        <!--<ImageButton-->
            <!--android:id="@+id/ibDirectMessageDetails"-->
            <!--android:layout_width="30dp"-->
            <!--android:layout_height="30dp"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:layout_marginRight="20dp"-->
            <!--android:backgroundTint="@android:color/transparent"-->
            <!--app:srcCompat="@drawable/ic_no_direct_message"/>-->
    <!--</LinearLayout>-->

    <!--<View-->
        <!--android:id="@+id/vDividerDetails3"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:layout_below="@+id/llButtonRowDetails"-->
        <!--android:background="@android:color/darker_gray"-->
        <!--android:layout_marginTop="5dp"-->
        <!--android:layout_marginLeft="5dp"-->
        <!--android:layout_marginRight="5dp"/>-->

</RelativeLayout>
